--- a/css/grid.css
+++ b/css/grid.css
@@ -1,5 +1,5 @@
 .container{
-    max-width: 1300px;
+    max-width: 1250px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
@@ -9,13 +9,14 @@
 .row{
     display: flex;
     flex-wrap: wrap;
-    margin-left: -12px;
-    margin-right: -12px;
+    justify-content: center;
+    margin-left: -15px;
+    margin-right: -15px;
 }
 
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12{
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .col-1{
