--- a/css/style.css
+++ b/css/style.css
@@ -177,3 +177,103 @@
     line-height: 32px;
 }
 /*End Sound Section*/
+
+/*Start Form Section*/
+.contact-section{
+    padding: 125px 0;
+}
+.contact-section .row{ 
+    justify-content: center;
+}
+
+.contact-section .row .col-6{
+    padding: 0;
+}
+
+.form-col{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    padding: 16px 48px;
+    background: #334756;
+    height: 100%;
+}
+
+.form-col h2{
+    color: #FFF;
+    font-family: "Ramabhadra", sans-serif;
+    font-size: 32px;
+    font-weight: 400;
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.flex{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+label{
+    color: #FFF;
+    font-family: "Ramabhadra", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.form input , .form select{
+    height: 56px;
+    padding: 10px 16px;
+    border-radius: 2px;
+    border: 0;
+    flex-grow: 1;
+    color: #667580;
+    font-family: "Ramabhadra", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.form textarea{
+    height: 142px;
+    padding: 16px;
+    border-radius: 2px;
+    border: 0;
+    flex-grow: 1;
+    color: #667580;
+    font-family: "Ramabhadra", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.form button{
+    display: inline-block;
+    height: 56px;
+    padding: 16px 24px;
+    border-radius: 2px;
+    border: 1px solid #FF4C29;
+    background: #FF4C29;
+    color: #667580;
+    font-family: "Ramabhadra", sans-serif;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 18px;
+    color: #FFF;
+    flex-grow: 1;
+    cursor: pointer;
+}
+
+.form button:hover{
+    transition: all linear 0.2s;
+    transform: scale(1);
+    background-color: #FFF;
+    color: #FF4C29;
+}
+
+.contact-section  .col-6 img{
+    width: 100%;
+    height: 100%;
+}
